--- a/mod.andrew.out/web-app/src/main/resources/templates/admin/add-product.html
+++ b/mod.andrew.out/web-app/src/main/resources/templates/admin/add-product.html
@@ -26,6 +26,10 @@
                 <label for="quantity">Quantity</label>
                 <input type="text" id="quantity" th:field="*{quantity}" class="form-control" />
             </div>
+            <div class="form-group">
+                <label for="image">Image URL</label>
+                <input type="text" id="image" th:field="*{image}" class="form-control" />
+            </div>
             <button type="submit" class="btn btn-primary">Add Product</button>
         </form>
     </div>
