--- a/mod.andrew.out/web-app/src/main/resources/templates/admin/products.html
+++ b/mod.andrew.out/web-app/src/main/resources/templates/admin/products.html
@@ -22,14 +22,14 @@
             </thead>
             <tbody>
                 <tr th:each="product : ${products}">
-                    <td th:text="${product.id}"></td>
+                    <td th:text="${product.pid}"></td>
                     <td th:text="${product.name}"></td>
                     
                     <td th:text="${product.price}"></td>
                     <td th:text="${product.quantity}"></td>
                     <td>
-                        <a th:href="@{/admin/products/edit/{id}(id=${product.id})}" class="btn btn-sm btn-info">Edit</a>
-                        <a th:href="@{/admin/products/delete/{id}(id=${product.id})}" class="btn btn-sm btn-danger">Delete</a>
+                        <a th:href="@{/admin/products/edit/{id}(id=${product.pid})}" class="btn btn-sm btn-info">Edit</a>
+                        <a th:href="@{/admin/products/delete/{id}(id=${product.pid})}" class="btn btn-sm btn-danger">Delete</a>
                     </td>
                 </tr>
             </tbody>
